--- a/output/papers/SI.Rmd
+++ b/output/papers/SI.Rmd
@@ -239,6 +239,77 @@ p.matrix.cues %+%
      filter(Normalization.Type == "no normalization (Hz)", F0 < 320))
 ```
 
+### Talker differences in the [i:] - [y:] contrast
+(ref:SI-swe-merge) The effect of including F3 for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction, illustrated in a reduced vowel space. **Panel A** shows two example talkers with overlapping [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] in F1-F2 space. **Panel B** shows how considering F3 affects the space: for talker SW_028, there is very little effect of F3, thus maintained [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] overlap, while for talker SW_027, separability increases.
+
+```{r SI-swe-merge, fig.width=base.width*3, fig.height=base.height*3, out.width='80%', fig.align='center', fig.cap="(ref:SI-swe-merge)", message=FALSE}
+p.merge <- d.SwehVd.forStudy.long.static %>%
+  filter(Normalization.Type == "Nearey's uniform scaling (log)", Quantity == "long", Talker %in% c("SW_028", "SW_027"), category %in% c("[iː]", "[yː]", "[æː]", "[ɑː]", "[oː]", "[uː]")) %>%
+  ggplot(
+    aes(
+      x = F2, 
+      y = F1)) +
+  geom_point(
+    aes(
+      colour = category,
+      shape = Quantity), alpha = 0.5, size = 1.5) + 
+  # Add within-talker mean
+  geom_label(
+    data =
+      . %>%
+      group_by(category, Quantity, Normalization.Type, Talker) %>%
+      summarise(across(c(F1, F2), ~ mean(.x))),
+    mapping = aes(
+      colour = category,
+      label = category,
+      fontface = ifelse(category %in% c("[iː]", "[yː]"), 2, 1)),
+    size = 4,
+    alpha = .4,
+    label.size = NA,
+    label.padding = unit(.06, "cm")) +
+  scale_colour_manual(name = "category", values = colors.vowel.swe) +
+  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
+  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 4)) +
+  guides(alpha = "none", color = "none", shape = "none", size = "none") +
+  facet_wrap(~ Talker, ncol=2) 
+
+p.merge.F3 <-  d.SwehVd.forStudy.long.static %>%
+  filter(Normalization.Type == "Nearey's uniform scaling (log)", Quantity == "long", Talker %in% c("SW_028", "SW_027"), category %in% c("[iː]", "[yː]", "[æː]", "[ɑː]", "[oː]", "[uː]")) %>%
+  ggplot(
+    aes(
+      x = F2, 
+      y = F3)) +
+  geom_point(
+    aes(
+      colour = category,
+      shape = Quantity), alpha = 0.5, size = 1.5) + 
+  # Add within-talker mean
+  geom_label(
+    data =
+      . %>%
+      group_by(category, Quantity, Normalization.Type, Talker) %>%
+      summarise(across(c(F3, F2), ~ mean(.x))),
+    mapping = aes(
+      colour = category,
+      label = category,
+      fontface = ifelse(category %in% c("[iː]", "[yː]"), 2, 1)),
+    size = 4,
+    alpha = .4,
+    label.size = NA, 
+    label.padding = unit(.06, "cm")) +
+  scale_colour_manual(name = "category", values = colors.vowel.swe) +
+  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
+  scale_y_reverse("F3", position = "right", scales::pretty_breaks(n = 4)) +
+  guides(alpha = "none", color = "none", shape = "none", size = "none") +
+  facet_wrap(~ Talker, ncol=2)
+  
+p.merge / p.merge.F3 + theme(axis.title.x = element_blank()) +
+  plot_annotation(tag_levels = 'A') &
+  theme(legend.margin = margin(0, 0, 0, 0, unit = "pt"),
+        plot.tag = element_text(face = "bold"))
+#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
+```
+
 ### Summary tables of LMMs predicting category separability from cue space {#sec:SI-LMMs-study1}
 #### Investigating separability in rounded vs. unrounded neighboring categories
 
@@ -351,7 +422,6 @@ rm(m.sep.I, m.sep.Y, m.sep.U, m.sep.E, m.sep.Ä, m.sep.ÄR, m.sep.Ö, m.sep.ÖR,
 ```
 
 ### Summary tables of GAMMs {#sec:SI-GAMMs}
-#### Summary tables of GAMMs fit to neighboring contrasts
 
 \begin{table}[ht]
 \caption{\label{tab:m-F1-long}Model summary, coefficients for parametric and smooth terms for the high front long vowels predicting F1}
@@ -864,8 +934,6 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 
 ```{r}
 ```
-
-#### Summary tables of GAMMs fit to all 21 categories
  
 \begin{table}[ht]
 \small
@@ -1305,6 +1373,75 @@ d.SweDia2000.forStudy.long %>%
   scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 6)) +
   guides(color = "none") +
   facet_wrap( ~ Quantity, labeller = label_wrap_gen(multi_line=FALSE))
+```
+
+### Visualization of the orthogonal projection ratio
+(ref:SI-op) Illustration of orthogonal projection ratio. Examples of target categories $V_{vowel}$ (in cyan), and their respective anchor categories, $U_{anchor}$ and $W_{anchor}$ (in red), from the SwehVd database. The $op$ measures the relative distance of $V_{vowel}$ to its anchors, as represented by the lines.
+
+```{r SI-op, fig.width=base.width*2, fig.height=base.height*2, out.width='50%', fig.align='center', fig.pos='ht', fig.cap="(ref:SI-op)"}
+d.SwehVd.forStudy.long.static %>%
+  # Filter down to test folds
+  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[ʉː]", "[oː]", "[ɪ]", "[eː]", "[æː]", "[ɑː]", "[ɛː]", "[øː]")) %>%
+  mutate(anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor"),
+         op_pair = case_when(category %in% c("[ʉː]", "[oː]", "[ɪ]") ~ "A",
+                             category %in% c("[eː]", "[ɑː]", "[øː]") ~ "B",
+                             category %in% c("[eː]", "[æː]", "[ɛː]") ~ "C")) %>%
+  ggplot(
+    aes(
+      x = F2, 
+      y = F1)) +
+  stat_ellipse(
+    mapping = aes(
+      colour = anchor,
+      fill = anchor,
+      group = interaction(anchor, category)),
+    geom = "polygon",
+    alpha = .4) +
+  geom_path(data =
+              . %>%
+              filter(category %in% c("[ɪ]", "[ʉː]", "[oː]")) %>%
+              mutate(
+                category = factor(category, levels = c("[ɪ]", "[ʉː]", "[oː]")),
+                group = "A") %>%
+              group_by(category, group, Normalization.Type) %>%
+              summarise(across(c(F1, F2), ~ mean(.x))),
+            linetype = "dotted") +
+  geom_path(data =
+              . %>%
+              filter(category %in% c("[eː]", "[øː]", "[ɑː]")) %>%
+              mutate(
+                category = factor(category, levels = c("[eː]", "[øː]", "[ɑː]")),
+                group = "B") %>%
+              group_by(category, group, Normalization.Type) %>%
+              summarise(across(c(F1, F2), ~ mean(.x))),
+            linetype = "dashed") +
+  geom_path(data =
+              . %>%
+              filter(category %in% c("[eː]", "[ɛː]", "[æː]")) %>%
+              mutate(
+                category = factor(category, levels = c("[eː]", "[ɛː]", "[æː]")),
+                group = "C") %>%
+              group_by(category, group, Normalization.Type) %>%
+              summarise(across(c(F1, F2), ~ mean(.x)))) +
+  # Add between-talker mean
+  geom_label(
+    data =
+      . %>%  
+      mutate(
+        anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor")) %>%
+      group_by(category, anchor, Normalization.Type) %>%
+      summarise(across(c(F1, F2), ~ mean(.x))),
+    mapping = aes(
+      colour = anchor,
+      label = category),
+    alpha = .8,
+    size = 5,
+    label.size = NA,
+    label.padding = unit(.06, "cm")) +
+  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
+  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 4)) +
+  guides(alpha = "none", color = "none", shape = "none", fill = "none")
+#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
 ```
 
 <!--### Sampling-with-replacement approach to op
