--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -673,77 +673,7 @@ p.matrix.cues
 #### Cues and cue correlations
 For the pairwise combinations of the five spectral and temporal cues---F0, F1, F2, F3 and duration, see Figure \@ref(fig:swe-vowels-all-cues) from @persson-jaeger2023 updated to include data from the 20 male talkers. The densities along the diagonal suggest that F0 carries the least information about vowel identity, exhibiting less between-category separation than all other cues. This is not surprising given that F0 is not considered an important cue to vowel identity in itself.
 
-As is to be expected, vowels differing in quality are most separated in the F1-F2 panels. The F1-F3 and F3-F2 panels both display increased separation between the neighboring outrounded [`r linguisticsdown::cond_cmpl("yː")`] and inrounded [`r linguisticsdown::cond_cmpl("ʉː")`], and unrounded [`r linguisticsdown::cond_cmpl("ɪ")`] and outrounded [`r linguisticsdown::cond_cmpl("ʏ")`], compared to when plotted along F1-F2, which points to the importance of F3 for these vowels. Interestingly, the almost complete overlap between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] in F1-F2 space overall remains when F3 is considered, even if some individual differences in the amount of overlap exist. Most talkers produce these two vowels very close in F1-F2 space, and only slightly separated in F2-F3 space, while others display a continued overlap when considering F3. For reference, one talker of each type are displayed in Figure \@ref(fig:swe-merge). This would seem to suggest that F3 might carry less importance as distinctive feature for [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] than previously established [c.f., @fant1959; @fant1969].
-
-(ref:swe-merge) The effect of including F3 for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction, illustrated in a reduced vowel space. **Panel A** shows two example talkers with overlapping [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] in F1-F2 space. **Panel B** shows how considering F3 affects the space: for talker SW_028, there is very little effect of F3, thus maintained [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] overlap, while for talker SW_027, separability increases.
-
-```{r swe-merge, fig.width=base.width*3, fig.height=base.height*3, out.width='80%', fig.align='center', fig.cap="(ref:swe-merge)", message=FALSE}
-p.merge <- d.SwehVd.forStudy.long.static %>%
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", Quantity == "long", Talker %in% c("SW_028", "SW_027"), category %in% c("[iː]", "[yː]", "[æː]", "[ɑː]", "[oː]", "[uː]")) %>%
-  ggplot(
-    aes(
-      x = F2, 
-      y = F1)) +
-  geom_point(
-    aes(
-      colour = category,
-      shape = Quantity), alpha = 0.5, size = 1.5) + 
-  # Add within-talker mean
-  geom_label(
-    data =
-      . %>%
-      group_by(category, Quantity, Normalization.Type, Talker) %>%
-      summarise(across(c(F1, F2), ~ mean(.x))),
-    mapping = aes(
-      colour = category,
-      label = category,
-      fontface = ifelse(category %in% c("[iː]", "[yː]"), 2, 1)),
-    size = 4,
-    alpha = .4,
-    label.size = NA,
-    label.padding = unit(.06, "cm")) +
-  scale_colour_manual(name = "category", values = colors.vowel.swe) +
-  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
-  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 4)) +
-  guides(alpha = "none", color = "none", shape = "none", size = "none") +
-  facet_wrap(~ Talker, ncol=2) 
-
-p.merge.F3 <-  d.SwehVd.forStudy.long.static %>%
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", Quantity == "long", Talker %in% c("SW_028", "SW_027"), category %in% c("[iː]", "[yː]", "[æː]", "[ɑː]", "[oː]", "[uː]")) %>%
-  ggplot(
-    aes(
-      x = F2, 
-      y = F3)) +
-  geom_point(
-    aes(
-      colour = category,
-      shape = Quantity), alpha = 0.5, size = 1.5) + 
-  # Add within-talker mean
-  geom_label(
-    data =
-      . %>%
-      group_by(category, Quantity, Normalization.Type, Talker) %>%
-      summarise(across(c(F3, F2), ~ mean(.x))),
-    mapping = aes(
-      colour = category,
-      label = category,
-      fontface = ifelse(category %in% c("[iː]", "[yː]"), 2, 1)),
-    size = 4,
-    alpha = .4,
-    label.size = NA, 
-    label.padding = unit(.06, "cm")) +
-  scale_colour_manual(name = "category", values = colors.vowel.swe) +
-  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
-  scale_y_reverse("F3", position = "right", scales::pretty_breaks(n = 4)) +
-  guides(alpha = "none", color = "none", shape = "none", size = "none") +
-  facet_wrap(~ Talker, ncol=2)
-  
-p.merge / p.merge.F3 + theme(axis.title.x = element_blank()) +
-  plot_annotation(tag_levels = 'A') &
-  theme(legend.margin = margin(0, 0, 0, 0, unit = "pt"),
-        plot.tag = element_text(face = "bold"))
-#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
-```
+As is to be expected, vowels differing in quality are most separated in the F1-F2 panels. The F1-F3 and F3-F2 panels both display increased separation between the neighboring outrounded [`r linguisticsdown::cond_cmpl("yː")`] and inrounded [`r linguisticsdown::cond_cmpl("ʉː")`], and unrounded [`r linguisticsdown::cond_cmpl("ɪ")`] and outrounded [`r linguisticsdown::cond_cmpl("ʏ")`], compared to when plotted along F1-F2, which points to the importance of F3 for these vowels. Interestingly, the almost complete overlap between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] in F1-F2 space overall remains when F3 is considered, even if some individual differences in the amount of overlap exist. Most talkers produce these two vowels very close in F1-F2 space, and only slightly separated in F2-F3 space, while others display a continued overlap when considering F3 (for reference, one talker of each type are displayed in SI Figure \@ref(fig:SI-swe-merge)). This would seem to suggest that F3 might carry less importance as distinctive feature for [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] than previously established [c.f., @fant1959; @fant1969].
 
 In order to quantitatively asses whether the distinction between closely neighboring unrounded and rounded categories increased when F3 was considered, the category separability of these vowels was calculated based on F1 and F2, and subsequently compared against the separability calculated when including F3. If separability were to increase when F3 was added, it would suggest that F3 does contribute to category distinctions. 
 
@@ -940,7 +870,6 @@ m.sep.ÅÅOO <- lmerTest::lmer(pairwise_separability ~ cue_dimension + (1|Talker
 
 m.sep.ÅO <- lmerTest::lmer(pairwise_separability ~ cue_dimension + (1|Talker),
                       data = d.SwehVd.cat.separability %>% filter(comparison == "ɔ - ʊ"))
-summary(m.sep.IIYY)
 ```
 
 #### Quantity vs. quality in long and short vowel pairs
@@ -1830,81 +1759,13 @@ Cue measurements from SweDia were extracted in the same way as for SwehVd (Secti
 In order to assess whether the relative placement of the categories in the acoustic space was different between datasets, formant data was visualized in F1-F2 space and distances assessed with the *orthogonal projection ratio*, henceforth $op$ [@stevens-schiel2019].^[Other distance measures are possible, such as Mahalanobi's distance. The primary advantages of using the $op$ is that it considers the overall structure of vowel spaces rather than individual distances, and that it offers a standardized way to compare the degree of category membership across different datasets.] Both visualizations and $op$ calculations were based on measurements at the steady-state portion of the vowel in both datasets---taking the average F1-F2 values across the three mid-points (at 35, 50, and 65% into the vowel). This approach presumably reduced the risk of coarticulatory effects resulting from the use of different phonological contexts between the two datasets.
 
 #### Orthogonal projection ratio {#sec:investigating-change}
-The $op$, formalized in \@ref(eq:orthogonal-projection-ratio), compares the position of a single token of a $V_{vowel}$ from a talker, relative to the means of two anchor categories, $U_{anchor}$ and $W_{anchor}$, from the same talker. The anchor categories are selected based on their position in the space relatively to $V_{vowel}$, see Figure \@ref(fig:op). After calculating the $op$ for each token of $V_{vowel}$ from each talker relative to the by-talker anchors, the $op$ is summarized across all tokens for that talker. This procedure is repeated for each of the vowels and their respective anchors for each talker in each dataset and then compared across datasets, in order to assess vowel shifts over time.
+The $op$, formalized in \@ref(eq:orthogonal-projection-ratio), compares the position of a single token of a $V_{vowel}$ from a talker, relative to the means of two anchor categories, $U_{anchor}$ and $W_{anchor}$, from the same talker. The anchor categories are selected based on their position in the space relatively to $V_{vowel}$ (for an illustration, see SI Figure \@ref(SI-fig:op)). After calculating the $op$ for each token of $V_{vowel}$ from each talker relative to the by-talker anchors, the $op$ is summarized across all tokens for that talker. This procedure is repeated for each of the vowels and their respective anchors for each talker in each dataset and then compared across datasets, in order to assess vowel shifts over time.
 
 \begin{equation}
  op(V_{vowel}) = ( -2 \cdot \frac{((V_{vowel} - U_{anchor}) \texttt{\%*\%} (U_{anchor} - W_{anchor}))}{((U_{anchor} - W_{anchor}) \texttt{\%*\%} (U_{anchor} - W_{anchor}))}) - 1 (\#eq:orthogonal-projection-ratio)
 \end{equation}
 
 An $op = 0$ indicates that the vowel $V_{vowel}$ is positioned exactly in the middle between $U_{anchor}$ and $W_{anchor}$, an $op = \pm 1$ indicates that $V_{vowel}$ is positioned exactly on the mean of one of the two anchors, whereas a $V_{vowel}$ positioned somewhere between $U_{anchor}$ and $W_{anchor}$ has an $op$ that varies between $\pm 1$. The $op$ can thus be used as an index of e.g., lowering, fronting, or centralizing.
-
-(ref:op) Illustration of orthogonal projection ratio. Examples of target categories $V_{vowel}$ (in cyan), and their respective anchor categories, $U_{anchor}$ and $W_{anchor}$ (in red), from the SwehVd database. The $op$ measures the relative distance of $V_{vowel}$ to its anchors, as represented by the lines.
-
-```{r op, fig.width=base.width*2, fig.height=base.height*2, out.width='50%', fig.align='center', fig.pos='ht', fig.cap="(ref:op)"}
-d.SwehVd.forStudy.long.static %>%
-  # Filter down to test folds
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[ʉː]", "[oː]", "[ɪ]", "[eː]", "[æː]", "[ɑː]", "[ɛː]", "[øː]")) %>%
-  mutate(anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor"),
-         op_pair = case_when(category %in% c("[ʉː]", "[oː]", "[ɪ]") ~ "A",
-                             category %in% c("[eː]", "[ɑː]", "[øː]") ~ "B",
-                             category %in% c("[eː]", "[æː]", "[ɛː]") ~ "C")) %>%
-  ggplot(
-    aes(
-      x = F2, 
-      y = F1)) +
-  stat_ellipse(
-    mapping = aes(
-      colour = anchor,
-      fill = anchor,
-      group = interaction(anchor, category)),
-    geom = "polygon",
-    alpha = .4) +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[ɪ]", "[ʉː]", "[oː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[ɪ]", "[ʉː]", "[oː]")),
-                group = "A") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x))),
-            linetype = "dotted") +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[eː]", "[øː]", "[ɑː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[eː]", "[øː]", "[ɑː]")),
-                group = "B") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x))),
-            linetype = "dashed") +
-  geom_path(data =
-              . %>%
-              filter(category %in% c("[eː]", "[ɛː]", "[æː]")) %>%
-              mutate(
-                category = factor(category, levels = c("[eː]", "[ɛː]", "[æː]")),
-                group = "C") %>%
-              group_by(category, group, Normalization.Type) %>%
-              summarise(across(c(F1, F2), ~ mean(.x)))) +
-  # Add between-talker mean
-  geom_label(
-    data =
-      . %>%  
-      mutate(
-        anchor = ifelse(category %in% c("[ʉː]", "[ɛː]", "[øː]"), "vowel", "anchor")) %>%
-      group_by(category, anchor, Normalization.Type) %>%
-      summarise(across(c(F1, F2), ~ mean(.x))),
-    mapping = aes(
-      colour = anchor,
-      label = category),
-    alpha = .8,
-    size = 5,
-    label.size = NA,
-    label.padding = unit(.06, "cm")) +
-  scale_x_reverse("F2", position = "top", scales::pretty_breaks(n = 4)) +
-  scale_y_reverse("F1", position = "right", scales::pretty_breaks(n = 4)) +
-  guides(alpha = "none", color = "none", shape = "none", fill = "none")
-#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
-```
 
 Table \@ref(tab:opr-table) lists all the vowels $V_{vowel}$ tested along with their corresponding anchor points, $U_{anchor}$ and $W_{anchor}$. These were all vowels for which the overall distance in F1 and F2 vowel means in SwehVd to SweDia, $\geq .85$ standard deviations from the vowel means in SweDia.^[The front `r linguisticsdown::cond_cmpl("[æː]")` was also included in this subset. Given that it occupies the lowest position in the space, the calculation of $op$ was not possible.]
 
@@ -2297,7 +2158,7 @@ GAMMs fit to the data contributed with further insights into the formant dynamic
 
 With regard to the neighboring contrasts hypothesized to rely on formant dynamics---the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`], [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`], and [`r linguisticsdown::cond_cmpl("øː")`]-[`r linguisticsdown::cond_cmpl("œː")`] contrasts, and their short counterparts---the results indicated significant differences for all comparisons and all cues with the exception of [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`], and [`r linguisticsdown::cond_cmpl("ɛ")`] - [`r linguisticsdown::cond_cmpl("æ")`] predicting F3, and [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], [`r linguisticsdown::cond_cmpl("øː")`]-[`r linguisticsdown::cond_cmpl("œː")`] predicting F1. This would seem to suggest that the movements in these vowels along these cues, are not contributing to vowel quality information. Presumably, the dynamics in remaining cues is sufficient for distinguishibility.
 
-The fitted GAMMs not only illustrated the effect of adjusting for formant movements, but also for individual differences in formant data. When accounting for talker-specific variability, a large portion of the overlap present in static analyses was removed. The GAMMs are furthermore fitted to each cue separately, which allowed for an assessment of the relative weight of each cue, compared to the separability index where the by-cue contributions can only be evaluated indirectly. An inherent limitation in the separability index, as implemented in this paper, is the simplifying assumption that all dimensions within a cue combination carry equal weight. It is therefore not possible to assess whether the relation between the cues in each space is symmetrical or not, that is, in the F1-F2 space, we do not know whether F1 carries as much information as F2 for separability, and vice versa. In addition, given that the comparisons are pairwise, they are limited to explaining the relation between two vowels in a contrast. As such, they cannot inform us of the separability of a given vowel from other neighboring vowels, or the overall category separability in the entire space. This is, however, a limitation that the separability index shares with the GAMMs. Neither of these methods are able to assess the distinguishability or confusability of all vowels under different cue combinations in one analysis. Nor can they inform us of the *perceived* distinguishibility, even if it is reasonable to assume that reduced overlap between tokens of neighboring categories would increase intelligibility [e.g., @bradlow1995; @wright2004]. For this, one could either fit a multinomial model predicting vowel from cue combinations, or a perceptual model that can assess the predicted consequences for perception by the use of categorization accuracies and confusion matrices. Such models can be an important avenue for future research, a starting point for the design of perception studies that can shed more light on the consequences of the present results for the perception of Central Swedish vowels. For instance, in a language with a systematic quantity distinction such as Swedish, the role of spectral cues in long-short vowel pair distinctions could be assessed by exposing listeners to synthesized versions where long and short vowel duration is crossed with the allophones' spectral information for any given phoneme. Furthermore, as the results seem to support claims of the hypothesized importance of formant dynamics for vowel distinctions, more insight into the effect of formant dynamics for vowel perception could be gained from having listeners categorize tokens extracted from different segments of the long vowels, e.g., the first three time-points vs. the three final time-points [c.f., @jenkins1994; @strange1989]. The design of such experiments can be informed by modeling the predicted perceptual consequences of different cue spaces, and of considering different vowel segments.
+Since the GAMMs were fit to each cue separately, they allowed for an assessment of the relative weight of each cue, compared to the separability index where the by-cue contributions can only be evaluated indirectly. An inherent limitation in the separability index, as implemented in this paper, is the simplifying assumption that all dimensions within a cue combination carry equal weight. It is therefore not possible to assess whether the relation between the cues in each space is symmetrical or not, that is, in the F1-F2 space, we do not know whether F1 carries as much information as F2 for separability, and vice versa. In addition, given that the comparisons are pairwise, they are limited to explaining the relation between two vowels in a contrast. As such, they cannot inform us of the separability of a given vowel from other neighboring vowels, or the overall category separability in the entire space. This is, however, a limitation that the separability index shares with the GAMMs. Neither of these methods are able to assess the distinguishability or confusability of all vowels under different cue combinations in one analysis. Nor can they inform us of the *perceived* distinguishibility, even if it is reasonable to assume that reduced overlap between tokens of neighboring categories would increase intelligibility [e.g., @bradlow1995; @wright2004]. For this, one could either fit a multinomial model predicting vowel from cue combinations, or a perceptual model that can assess the predicted consequences for perception by the use of categorization accuracies and confusion matrices. Such models can be an important avenue for future research, a starting point for the design of perception studies that can shed more light on the consequences of the present results for the perception of Central Swedish vowels. For instance, in a language with a systematic quantity distinction such as Swedish, the role of spectral cues in long-short vowel pair distinctions could be assessed by exposing listeners to synthesized versions where long and short vowel duration is crossed with the allophones' spectral information for any given phoneme. Furthermore, as the results seem to support claims of the hypothesized importance of formant dynamics for vowel distinctions, more insight into the effect of formant dynamics for vowel perception could be gained from having listeners categorize tokens extracted from different segments of the long vowels, e.g., the first three time-points vs. the three final time-points [c.f., @jenkins1994; @strange1989]. The design of such experiments can be informed by modeling the predicted perceptual consequences of different cue spaces, and of considering different vowel segments.
 
 ## Vowel shifts
 In Study 2, the acoustic characteristics of SwehVd was subsequently compared to that of 8 reference talkers of Central Swedish from the SweDia materials recorded approximately one generation ago, in order to investigate the scope and spread of vowel changes noted in Study 1 [some of which, previously reported in @pelzer-boersma2019]. The aim was to present a broad-scale comparison by evaluating changes in all but one of the 21 categories, using empirical formant analysis and a distance metric, the $op$.
