--- a/output/papers/SI.Rmd
+++ b/output/papers/SI.Rmd
@@ -240,6 +240,8 @@ p.matrix.cues %+%
 ```
 
 ### Talker differences in the [i:] - [y:] contrast
+Figure \@ref(fig:SI-swe-merge) visualizes two example talkers that differ in their phonetic realization of [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] when F3 is considered.
+
 (ref:SI-swe-merge) The effect of including F3 for the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] distinction, illustrated in a reduced vowel space. **Panel A** shows two example talkers with overlapping [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] in F1-F2 space. **Panel B** shows how considering F3 affects the space: for talker SW_028, there is very little effect of F3, thus maintained [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] overlap, while for talker SW_027, separability increases.
 
 ```{r SI-swe-merge, fig.width=base.width*3, fig.height=base.height*3, out.width='80%', fig.align='center', fig.cap="(ref:SI-swe-merge)", message=FALSE}
@@ -422,6 +424,7 @@ rm(m.sep.I, m.sep.Y, m.sep.U, m.sep.E, m.sep.Ä, m.sep.ÄR, m.sep.Ö, m.sep.ÖR,
 ```
 
 ### Summary tables of GAMMs {#sec:SI-GAMMs}
+Tables \@ref(tab:m-F1-long), \@ref(tab:m.F1.front.short), \@ref(tab:m.F2.front.long), \@ref(tab:m.F2.front.short), \@ref(tab:m.F3.front.long), \@ref(tab:m.F3.front.short)    summarize the results of the GAMMs fit to neighboring contrasts.
 
 \begin{table}[ht]
 \caption{\label{tab:m-F1-long}Model summary, coefficients for parametric and smooth terms for the high front long vowels predicting F1}
@@ -558,6 +561,8 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 ```{r}
 ```
 
+Tables \@ref(tab:m.F1.back.long), \@ref(tab:m.F1.back.short), \@ref(tab:m.F2.back.long), \@ref(tab:m.F2.back.short), \@ref(tab:m.F3.back.long), \@ref(tab:m.F3.back.short)    summarize the results of the GAMMs fit to neighboring high back contrasts.
+
 \begin{table}[ht]
 \caption{\label{tab:m.F1.back.long}Model summary, coefficients for parametric and smooth terms for the high back long vowels predicting F1}
 \centering
@@ -680,6 +685,8 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 
 ```{r}
 ```
+
+Tables \@ref(tab:m.F1.center.long), \@ref(tab:m.F1.center.short), \@ref(tab:m.F2.center.long), \@ref(tab:m.F2.center.short), \@ref(tab:m.F3.center.long), \@ref(tab:m.F3.center.short) summarize the results of the GAMMs fit to neighboring lower-mid front contrasts.
 
 \begin{table}[ht]
 \caption{\label{tab:m.F1.center.long}Model summary, coefficients for parametric and smooth terms for the lower-mid front long vowels predicting F1}
@@ -808,6 +815,7 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 ```{r}
 #gamtabs(m.F3.mid.short, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.F3.mid.short")
 ```
+Tables \@ref(tab:m.F1.mid.long), \@ref(tab:m.F1.mid.short), \@ref(tab:m.F2.mid.long), \@ref(tab:m.F2.mid.short), \@ref(tab:m.F3.mid.long), \@ref(tab:m.F3.mid.short) summarize the results of the GAMMs fit to mid center neighboring contrasts.
 
 \begin{table}[ht]
 \caption{\label{tab:m.F1.mid.long}Model summary, coefficients for parametric and smooth terms for the mid center long vowels predicting F1}
@@ -934,7 +942,8 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 
 ```{r}
 ```
- 
+Tables \@ref(tab:m-F1-paired), \@ref(tab:m-F2-paired), \@ref(tab:m-F3-paired), \@ref(tab:m-duration-paired summarize the results of the GAMMs fit to long-short vowel pairs.
+
 \begin{table}[ht]
 \small
 \caption{\label{tab:m-F1-paired}Model summary, coefficients for parametric and smooth terms for all 21 vowels predicting F1} 
@@ -1175,6 +1184,7 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 ```
 
 #### Visualizations of GAMMs {#sec:SI-GAMMs-figs}
+Figures \@ref(fig:SI-m-F1-paired), \@ref(fig:SI-m-F2-paired), \@ref(fig:SI-m-F3-paired) visualize the GAMMs fit to the long-short vowel pairs.
 
 (ref:SI-m-F1-paired) Fitted smooths of GAMM for predicting F1 and 95% confidence intervals for all vowel pairs. For visualization purposes, the pairs are split into high vowels (**left panel**), and lower-mid vowels (**right panel**).
 
@@ -1208,6 +1218,7 @@ rm(m.F1.paired, m.F2.paired, m.F3.paired, m.duration.paired)
 ## Additional information on Study 2 {#sec:SI-SweDia}
 
 ### Wordlist used for recording of SweDia {#sec:SI-SweDia-wordlist}
+Table \@ref(tab:word-list) lists the words used for recording of the SweDia database.
 
 \begin{table}
 \caption{\label{tab:word-list}Words recorded by talkers of Central Swedish for the SweDia database}
@@ -1376,6 +1387,8 @@ d.SweDia2000.forStudy.long %>%
 ```
 
 ### Visualization of the orthogonal projection ratio
+Figure \@ref(fig:SI-op) illustrates the orthogonal projection ratio.
+
 (ref:SI-op) Illustration of orthogonal projection ratio. Examples of target categories $V_{vowel}$ (in cyan), and their respective anchor categories, $U_{anchor}$ and $W_{anchor}$ (in red), from the SwehVd database. The $op$ measures the relative distance of $V_{vowel}$ to its anchors, as represented by the lines.
 
 ```{r SI-op, fig.width=base.width*2, fig.height=base.height*2, out.width='50%', fig.align='center', fig.pos='ht', fig.cap="(ref:SI-op)"}
