prep for submission

--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -66,7 +66,7 @@ documentclass     : "apa6"
 classoption       : "man"
 fontsize          : 12pt
 output:
-  papaja::apa6_docx:
+  papaja::apa6_pdf:
     latex_engine: xelatex
     error: true
     includes:
@@ -107,7 +107,7 @@ library(knitr)
 # Set knit defaults for code chunks
 opts_chunk$set(
   fig.path = "../../figures/knitted/",
-  dpi=600,
+  dpi=300,
   dev=c('jpeg', 'png'), # default format of figures
   comment="",
   echo=FALSE, warning=FALSE, message=FALSE,
@@ -1234,7 +1234,7 @@ d.SwehVd.forStudy.long.dynamic %>%
 
 #### Models of formant dynamics
 ##### The effect of modeling formant dynamics for neighboring contrasts
-The first set of 8 GAMMs were modeled separately for each cue (F1, F2, F3) and each of the sets of neighboring vowels hypothesized to (at least for some talkers) rely on formant dynamics [@fant1971; @kuronen2000; @pelzer-boersma2019]: the high front vowel contrasts [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("eː")`] and its short counterpart [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], the high back vowel contrast [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`] and its short counterpart [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("ʊ")`], the lower-mid front contrast [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`] and short [`r linguisticsdown::cond_cmpl("ɛ")`] - [`r linguisticsdown::cond_cmpl("æ")`], and the mid center [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("œː")`] and [`r linguisticsdown::cond_cmpl("ø")`] - [`r linguisticsdown::cond_cmpl("œ")`]. Summary tables of all 8 models are included in the SI, Section \@ref(sec:SI-GAMMs).
+The first set of GAMMs were modeled separately for each cue (F1, F2, F3) and each of the sets of neighboring vowels hypothesized to (at least for some talkers) rely on formant dynamics [@fant1971; @kuronen2000; @pelzer-boersma2019]: the high front vowel contrasts [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`] - [`r linguisticsdown::cond_cmpl("eː")`] and its short counterpart [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], the high back vowel contrast [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`] and its short counterpart [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("ʊ")`], the lower-mid front contrast [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`] and short [`r linguisticsdown::cond_cmpl("ɛ")`] - [`r linguisticsdown::cond_cmpl("æ")`], and the mid center [`r linguisticsdown::cond_cmpl("øː")`] - [`r linguisticsdown::cond_cmpl("œː")`] and [`r linguisticsdown::cond_cmpl("ø")`] - [`r linguisticsdown::cond_cmpl("œ")`]. Summary tables of models are included in the SI, Section \@ref(sec:SI-GAMMs).
 
 ```{r}
 # Run GAMMs predicting F1, F2, F3 separately for subsets of neighboring contrasts
@@ -1477,7 +1477,7 @@ m.F3.mid.short <- mgcv::bam(F3 ~ category + Gender + s(timepoint, by = category,
                         data = d.model.mid.short)
 ```
 
-The GAMMs fit to the high front vowel contrasts suggested an effect of vowel on all cues for all vowels (all $ps < .0025$), except for [`r linguisticsdown::cond_cmpl("yː")`] predicting F3 ($\hat\beta = .0007, SE = .013, p > .95$), and for [`r linguisticsdown::cond_cmpl("ʏ")`] predicting F1 ($\hat\beta = .01, SE = .01, p > .32$). The long [`r linguisticsdown::cond_cmpl("yː")`] predicting F2 was also close to insignificant ($p > .046$). This indicates that the F3-dynamics does not aid in distinguishing between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], and neither does F1-dynamics for [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`]. These results would thus overall seem to suggest that while F3 increases separability between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] under static analysis, the *dynamics* in F3 does not seem to add anything to the contrast. For the [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] contrast, F3 is likely more informative, while the F1 dynamics does not contribute to distinguishing between the two. Figure \@ref(fig:m-high-front) panels A and E demonstrate the importance of formant dynamics for the high front long vowels in F1 and F3, as many of the vowels are overlapping at some time-points, but never along the entire segment. 
+The GAMMs fit to the high front vowel contrasts suggested an effect of vowel on all cues for all vowels (all $ps < .0025$), except for [`r linguisticsdown::cond_cmpl("yː")`] predicting F3 ($\hat\beta = .0007, SE = .013, p > .95$), and for [`r linguisticsdown::cond_cmpl("ʏ")`] predicting F1 ($\hat\beta = .01, SE = .01, p > .32$). The long [`r linguisticsdown::cond_cmpl("yː")`] predicting F2 was also close to insignificant ($p > .046$). This indicates that F3-dynamics does not aid in distinguishing between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`], and neither does F1-dynamics for [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`]. These results would thus overall seem to suggest that while F3 increases separability between [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] under static analysis, the *dynamics* in F3 does not seem to add anything to the contrast. For the [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] contrast, F3 is likely more informative, while the F1-dynamics does not contribute to distinguishing between the two. Figure \@ref(fig:m-high-front) panels A and E demonstrate the importance of formant dynamics for the high front long vowels in F1 and F3, as many of the vowels are overlapping at some time-points, but never along the entire segment. 
 
 (ref:m-high-front) Fitted smooths of GAMM for predicting F1 (**upper row**), F2 (**mid row**), F3 (**bottom row**) and 95% confidence intervals for the long vowels [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ʉː")`], and [`r linguisticsdown::cond_cmpl("eː")`] (**left**), and the short vowels [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("ʏ")`] (**right**).
 
@@ -1506,7 +1506,7 @@ itsadug::plot_smooth(m.F3.back.long, view = "timepoint", plot_all = "category", 
 itsadug::plot_smooth(m.F3.back.short, view = "timepoint", plot_all = "category", col = c("#1F78B4", "#33A02C"), print.summary = FALSE, ylim = c(.7, 1), hide.label = T, main = "F")
 #ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
 ```
-The GAMMs fit to the lower-mid front long and short vowel contrasts suggested an effect of vowel on F1 and F2 (all $ps < .0001$), but not on F3 (for [`r linguisticsdown::cond_cmpl("æː")`], $\hat\beta = -.012, SE = .01, p > .25$; for [`r linguisticsdown::cond_cmpl("æ")`], $\hat\beta = .012, SE = .008, p > .14$). Figure \@ref(fig:m-center) demonstrates how these vowels overlap in F3 dynamics, but are distinguished for larger parts of the segment along F1 and F2.
+The GAMMs fit to the lower-mid front long and short vowel contrasts suggested an effect of vowel on F1 and F2 (all $ps < .0001$), but not on F3 (for [`r linguisticsdown::cond_cmpl("æː")`], $\hat\beta = -.012, SE = .01, p > .25$; for [`r linguisticsdown::cond_cmpl("æ")`], $\hat\beta = .012, SE = .008, p > .14$). Figure \@ref(fig:m-center) demonstrates how these vowels overlap in F3-dynamics, but are distinguished for larger parts of the segment along F1 and F2.
 
 (ref:m-center) Fitted smooths of GAMM for predicting F1 (**upper row**), F2 (**mid row**), F3 (**bottom row**) and 95% confidence intervals for the long vowels [`r linguisticsdown::cond_cmpl("ɛː")`] - [`r linguisticsdown::cond_cmpl("æː")`] (**left**), and the short vowels [`r linguisticsdown::cond_cmpl("ɛ")`] - [`r linguisticsdown::cond_cmpl("æ")`] (**right**).
 
@@ -1606,9 +1606,7 @@ rm(d.model.front.long, d.model.front.short, d.model.back.long, d.model.back.shor
 ```
 
 ##### Formant dynamics in long-short vowel pairs
-The second set of 4 GAMMs modeled the effect of F1, F2, F3 and duration on all long and short vowel pairs. Summary tables and visualizations of these GAMMs are included in the SI (Section \@ref(sec:SI-GAMMs)). There was a treatment effect of vowel on all spectral and temporal cues for all vowel pairs (for F1, all $ps < .04$; for F2 and duration, all $ps < .0001$, for F3, all $ps < .0005$). With the exception of the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] vowel pair, all rounded vowels displayed lower F3 values, hence more lip-rounding, in their long allophones [e.g., @hadding1976; @stalhammar1973]. The results suggest that when formant dynamics are considered, *all* long-short Central Swedish vowel pairs differ in spectral and temporal cues. Among the pairs that displayed smaller, albeit statistically significant, differences in spectral cues are the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] pair predicting F1 and F3 (Figure \@ref(fig:m-paired)), possibly indicating a tendency for stronger duration dependency, in line with previous perceptual work [@behne-kirk1997]. While the static analysis suggested that F1-F2-F3 only numerically increased separability for long-short pairs, with the exception of [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], the dynamic analysis suggests that all cues, when considered separately, carry information about vowel quality in quantity contrasts under the assumption of formant dynamics.
-
-(ref:m-paired) Fitted smooths of GAMM and 95% confidence intervals for the vowel pair [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] predicting F1 (**left**), and F3 (**right**). 
+The second set of GAMMs modeled the effect of F1, F2, F3 and duration on all long and short vowel pairs. Summary tables and visualizations of these GAMMs are included in the SI (Section \@ref(sec:SI-GAMMs)). There was a treatment effect of vowel on all spectral and temporal cues for all vowel pairs (for F1, all $ps < .04$; for F2 and duration, all $ps < .0001$, for F3, all $ps < .0005$). With the exception of the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] vowel pair, all rounded vowels displayed lower F3 values, hence more lip-rounding, in their long allophones [e.g., @hadding1976; @stalhammar1973]. The results suggest that when formant dynamics are considered, *all* long-short Central Swedish vowel pairs differ in spectral and temporal cues. Among the pairs that displayed smaller, albeit statistically significant, differences in spectral cues are the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] pair predicting F1 and F3, possibly indicating a tendency for stronger duration dependency, in line with previous perceptual work [@behne-kirk1997]. While the static analysis suggested that F1-F2-F3 only numerically increased separability for long-short pairs, with the exception of [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] and [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("ɛ")`], the dynamic analysis suggests that all cues, when considered separately, carry information about vowel quality in quantity contrasts under the assumption of formant dynamics.
 
 ```{r}
 # Dataframe for running GAMMs on all 21 vowels grouped by pair
@@ -1657,13 +1655,6 @@ m.duration.paired <- mgcv::bam(Duration ~ category + Gender +
                            s(Talker, bs = "re") +
                            s(Talker, category, bs = "re"),
                          data = d.model.paired)
-```
-
-```{r m-paired, message=FALSE, fig.width=base.width*4, fig.height=base.height*1.5, fig.align='center', fig.pos='ht', fig.cap="(ref:m-paired)"}
-par(mfrow=c(1,2))
-itsadug::plot_smooth(m.F1.paired, view = "timepoint", plot_all = "category", col = c("#66C2A5", "#1B9E77"), print.summary = FALSE, cond = list(category = c("[iː]", "[ɪ]")), hide.label = T)
-itsadug::plot_smooth(m.F3.paired, view = "timepoint", plot_all = "category", col = c("#66C2A5", "#1B9E77"), print.summary = FALSE, cond = list(category = c("[iː]", "[ɪ]")), hide.label = T)
-#ggsave(file = "../../figures/p.png", width = 9, height = 5, dpi=1200)
 ```
 
 ### Results summary
@@ -1791,7 +1782,7 @@ To assess the magnitude of differences in $op$ between datasets, separate LMMs f
 ## Results
 Figure \@ref(fig:db-comparison) displays the vowel movements in F1-F2 space across talkers over time. The figure suggests that a few vowels display considerable stability over time, e.g., the back vowels [`r linguisticsdown::cond_cmpl("ɑː")`] and [`r linguisticsdown::cond_cmpl("oː")`], the center vowels [`r linguisticsdown::cond_cmpl("œː")`] and [`r linguisticsdown::cond_cmpl("a")`], and the front vowels  [`r linguisticsdown::cond_cmpl("eː")`] and [`r linguisticsdown::cond_cmpl("ɛ")`]. The remaining vowels have all moved to a lesser or greater extent. Two general tendencies can be noted. Firstly, several of the vowels that form the edges of the space slightly shift further outwards, causing the overall space to widen. This is the case for [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("æː")`], [`r linguisticsdown::cond_cmpl("oː")`], and [`r linguisticsdown::cond_cmpl("uː")`]. Most of the inner vowels either also shift outwards---[`r linguisticsdown::cond_cmpl("ʏ")`], [`r linguisticsdown::cond_cmpl("ɵ")`], [`r linguisticsdown::cond_cmpl("ʉː")`], [`r linguisticsdown::cond_cmpl("ʊ")`], [`r linguisticsdown::cond_cmpl("ɔ")`]---or centralize---[`r linguisticsdown::cond_cmpl("ø")`], [`r linguisticsdown::cond_cmpl("øː")`], [`r linguisticsdown::cond_cmpl("œ")`]. Second, these movements lead to some neighboring categories closing in on each other, e.g., [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`],  [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`], [`r linguisticsdown::cond_cmpl("ø")`] - [`r linguisticsdown::cond_cmpl("œ")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`], or increasing their separability---[`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`], [`r linguisticsdown::cond_cmpl("ø")`] - [`r linguisticsdown::cond_cmpl("øː")`], [`r linguisticsdown::cond_cmpl("ʏ")`] - [`r linguisticsdown::cond_cmpl("ʉː")`].
 
-Figure \@ref(fig:db-comparison) further suggests a series of consecutive movements in the front partof the space, where [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("ʏ")`] have traveled further up and front in SwehVd, while [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`] have centralized. Finally, Figure \@ref(fig:db-comparison) shows that [`r linguisticsdown::cond_cmpl("ɛː")`] have lowered substantially compared to SweDia, down to a position close to [`r linguisticsdown::cond_cmpl("æː")`] (and to [`r linguisticsdown::cond_cmpl("æ")`]; recall Figure \@ref(fig:swe-vowels)). The already low [`r linguisticsdown::cond_cmpl("æː")`] has in turn moved further down, presumably constrained by the lower bound and cannot move further.
+Figure \@ref(fig:db-comparison) further suggests a series of consecutive movements in the front part of the space, where [`r linguisticsdown::cond_cmpl("eː")`], [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("ʏ")`] have traveled further up and front in SwehVd, while [`r linguisticsdown::cond_cmpl("iː")`], [`r linguisticsdown::cond_cmpl("yː")`] and [`r linguisticsdown::cond_cmpl("ʉː")`] have centralized. Finally, Figure \@ref(fig:db-comparison) shows that [`r linguisticsdown::cond_cmpl("ɛː")`] have lowered substantially compared to SweDia, down to a position close to [`r linguisticsdown::cond_cmpl("æː")`] (and to [`r linguisticsdown::cond_cmpl("æ")`]; recall Figure \@ref(fig:swe-vowels)). The already low [`r linguisticsdown::cond_cmpl("æː")`] has in turn moved further down, presumably constrained by the lower bound and cannot move further.
 
 (ref:db-comparison) Vowel category movements in the Central Swedish vowel space from 1999 to 2023, in F1-F2 space. The arrow indicates the direction of movement over time, with base of arrow representing SweDia (vowel label) and tip of arrow representing SwehVd. Vowel data is taken at the steady state of the vowel (averaged across the three mid-points) and averaged across talkers in the two datasets.
 
