--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -107,7 +107,7 @@ library(knitr)
 # Set knit defaults for code chunks
 opts_chunk$set(
   fig.path = "../../figures/knitted/",
-  dpi=300,
+  dpi=600,
   dev=c('jpeg', 'png'), # default format of figures
   comment="",
   echo=FALSE, warning=FALSE, message=FALSE,
@@ -138,7 +138,7 @@ base.width = 2.5
 base.height = 2.5
 base_size = 10
 
-INCLUDE_SI = T     # switch on/off to include SI.
+INCLUDE_SI = F     # switch on/off to include SI.
 ```
 
 \setcounter{page}{1}
